<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginRight="@dimen/activity_margin"
    android:layout_marginLeft="@dimen/activity_margin"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/min_text"/>
    <EditText
        android:id="@+id/minYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="4"
        android:hint="@string/year_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/max_text"/>
    <EditText
        android:id="@+id/maxYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLength="4"
        android:hint="@string/year_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_weight="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelClicked"
            android:text="@string/txt_cancel"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDoneClicked"
            android:text="@string/txt_done"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onResetClicked"
            android:text="@string/txt_reset"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/txt_reset_desc"/>



</LinearLayout>